# opengl

./: README.md
coordinate-systems/: CMakeLists.txt  README.md
coordinate-systems/include/: shaders.h  textures.h
coordinate-systems/res/shaders/: fs.glsl  vs.glsl
coordinate-systems/src/: main.cpp  shader.cpp  texture.cpp
hello-parallelogram/: CMakeLists.txt  README.md
hello-parallelogram/src/: main.cpp
hello-triangle/: CMakeLists.txt  README.md
hello-triangle/src/: main.cpp
shaders/: CMakeLists.txt  README.md
shaders/include/: shaders.h
shaders/res/shaders/: fs.glsl  vs.glsl
shaders/src/: main.cpp  shader.cpp
textures/: CMakeLists.txt  README.md
textures/res/shaders/: fs.glsl  vs.glsl
textures/src/: main.cpp
transformations/: CMakeLists.txt  README.md
transformations/res/shaders/: vs.glsl
transformations/src/: main.cpp
